--- a/package.json
+++ b/package.json
@@ -11,6 +11,17 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "qrcode-terminal": "^0.12.0"
+    "cors": "^2.8.5",
+    "express": "^5.2.1",
+    "express-graphql": "^0.12.0",
+    "graphql": "^15.10.1",
+    "graphql-http": "^1.22.4",
+    "jsonwebtoken": "^9.0.2",
+    "qrcode-terminal": "^0.12.0",
+    "redis": "^5.8.3",
+    "socket.io": "^4.8.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
