--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^5.2.1",
     "express-graphql": "^0.12.0",
+    "fastify": "^5.7.4",
     "graphql": "^15.10.1",
     "graphql-http": "^1.22.4",
     "jsonwebtoken": "^9.0.2",
@@ -22,6 +23,10 @@
     "socket.io": "^4.8.3"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "autocannon": "^8.0.0",
+    "clinic": "^13.0.0",
+    "node-monitor": "^0.3.11",
+    "nodemon": "^3.1.11",
+    "socket.io-client": "^4.8.3"
   }
 }
